Ensured CSS Stylesheets were linked properly with basic styles applied. Ready to work on content

--- a/index.html
+++ b/index.html
@@ -9,8 +9,32 @@
   <title>Document</title>
 </head>
 
-<body>
+<body class="site">
+  <header class="header">
+    <nav class="navbar">
+      <ul>
+        <a href="#">
+          <li>Home</li>
+        </a>
+        <a href="#">
+          <li>Our Story</li>
+        </a>
+        <a href="#">
+          <li>Registry</li>
+        </a>
+        <a href="#">
+          <li>Contact</li>
+        </a>
+      </ul>
+    </nav>
+  </header>
+  <main class="main">
 
+  </main>
+
+  <footer class="footer">
+
+  </footer>
 </body>
 
 </html>
