Completed basic layout & styling of homepage. Started working on Wedding Party Page

--- a/index.html
+++ b/index.html
@@ -10,30 +10,36 @@
 </head>
 
 <body class="site">
+  <nav class="navbar">
+    <ul class="navlist">
+      <li><a href="index.html">Home</a></li>
+      <li><a href="#">Photos</a></li>
+      <li><a href="/pages/wedding-party.html">Wedding Party</a></li>
+      <li><a href="#">Accommodations</a></li>
+      <li><a href="#">Venue</a></li>
+    </ul>
+  </nav>
   <header class="header">
-    <nav class="navbar">
-      <ul>
-        <a href="#">
-          <li>Home</li>
-        </a>
-        <a href="#">
-          <li>Our Story</li>
-        </a>
-        <a href="#">
-          <li>Registry</li>
-        </a>
-        <a href="#">
-          <li>Contact</li>
-        </a>
-      </ul>
-    </nav>
+    <h1>Megan and Ryan</h1>
+    <h3>October 15th, 2021</h3>
   </header>
   <main class="main">
-
+    <section>
+      <h2>Our Story</h2>
+      <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Vero, vitae. Possimus tenetur repudiandae quod
+        placeat quasi itaque corrupti iste rem vitae aut optio ab, voluptates enim? Fugit mollitia dolores expedita.</p>
+      <p>Amet inventore repellat, rerum sequi unde et doloribus consequatur cumque consectetur, officia est similique
+        suscipit molestiae officiis, exercitationem quaerat debitis assumenda quis. Quibusdam consectetur dicta numquam
+        quidem iste laboriosam sunt!</p>
+      <p>Porro harum earum modi exercitationem omnis tempora. Eum praesentium corporis autem, pariatur, sapiente nobis
+        quibusdam sed voluptas mollitia numquam perferendis? Laudantium cum nisi tempore, fugit quidem unde ducimus
+        similique nesciunt.</p>
+    </section>
   </main>
 
   <footer class="footer">
-
+    <p>Made with <span>♥</span> by <a href="https://www.ryanfurrer.dev" target="_blank" rel="noopener noreferrer">Ryan
+        Furrer</a></p>
   </footer>
 </body>
 
