Added bridal party members & placeholder images

--- a/pages/wedding-party.html
+++ b/pages/wedding-party.html
@@ -25,34 +25,80 @@
   </header>
   <main class="main">
     <section>
-      <h2>Bridal Party</h2>
-      <div class="card">
+      <!-- <h2>Bridal Party</h2> -->
+      <div class="wedding-party-card">
+        <img src="https://via.placeholder.com/150" alt="">
         <h3>Amanda Laikin</h3>
         <h4>Maid of Honor</h4>
       </div>
-      <div class="card">
+      <div class="wedding-party-card">
+        <img src="https://via.placeholder.com/150" alt="">
         <h3>Emily Baio</h3>
         <h4>Bridesmaid</h4>
       </div>
-      <div class="card">
+      <div class="wedding-party-card">
+        <img src="https://via.placeholder.com/150" alt="">
         <h3>Joanna Bonura</h3>
         <h4>Bridesmaid</h4>
       </div>
-      <div class="card">
+      <div class="wedding-party-card">
+        <img src="https://via.placeholder.com/150" alt="">
         <h3>Anna Yung</h3>
         <h4>Bridesmaid</h4>
       </div>
-      <div class="card">
+      <div class="wedding-party-card">
+        <img src="https://via.placeholder.com/150" alt="">
         <h3>Samantha Motta</h3>
         <h4>Bridesmaid</h4>
       </div>
-      <div class="card">
+      <div class="wedding-party-card">
+        <img src="https://via.placeholder.com/150" alt="">
         <h3>Emily Furrer</h3>
         <h4>Bridesmaid</h4>
       </div>
-      <div class="card">
+      <div class="wedding-party-card">
+        <img src="https://via.placeholder.com/150" alt="">
         <h3>Erin Werner</h3>
         <h4>Bridesmaid</h4>
+      </div>
+    </section>
+
+    <section>
+      <!-- <h2>Groom Party</h2> -->
+      <div class="wedding-party-card">
+        <img src="https://via.placeholder.com/150" alt="">
+        <h3>Walter Furrer</h3>
+        <h4>Best Man</h4>
+      </div>
+      <div class="wedding-party-card">
+        <img src="https://via.placeholder.com/150" alt="">
+        <h3>Anthony Calderaro</h3>
+        <h4>Groomsman</h4>
+      </div>
+      <div class="wedding-party-card">
+        <img src="https://via.placeholder.com/150" alt="">
+        <h3>Joeseph Ryan</h3>
+        <h4>Groomsman</h4>
+      </div>
+      <div class="wedding-party-card">
+        <img src="https://via.placeholder.com/150" alt="">
+        <h3>Thomas Ryan</h3>
+        <h4>Groomsman</h4>
+      </div>
+      <div class="wedding-party-card">
+        <img src="https://via.placeholder.com/150" alt="">
+        <h3>Richard Motta</h3>
+        <h4>Groomsman</h4>
+      </div>
+      <div class="wedding-party-card">
+        <img src="https://via.placeholder.com/150" alt="">
+        <h3>Maurice Tompkins</h3>
+        <h4>Groomsman</h4>
+      </div>
+      <div class="wedding-party-card">
+        <img src="https://via.placeholder.com/150" alt="">
+        <h3>Didier Valles</h3>
+        <h4>Groomsman</h4>
       </div>
     </section>
   </main>
