Designed mobile layout for wedding-party page

--- a/pages/wedding-party.html
+++ b/pages/wedding-party.html
@@ -24,7 +24,7 @@
     <h3>Who are we partying with?</h3>
   </header>
   <main class="main">
-    <section>
+    <section class="bridal-party-section">
       <!-- <h2>Bridal Party</h2> -->
       <div class="wedding-party-card">
         <img src="https://via.placeholder.com/150" alt="">
@@ -63,7 +63,7 @@
       </div>
     </section>
 
-    <section>
+    <section class="bridal-party-section">
       <!-- <h2>Groom Party</h2> -->
       <div class="wedding-party-card">
         <img src="https://via.placeholder.com/150" alt="">
