--- a/pages/wedding-party.html
+++ b/pages/wedding-party.html
@@ -25,7 +25,7 @@
   </header>
   <main class="main">
     <section class="bridal-party-section">
-      <!-- <h2>Bridal Party</h2> -->
+      <h2>Bridesmaids</h2>
       <div class="wedding-party-card">
         <img src="https://via.placeholder.com/150" alt="">
         <h3>Amanda Laikin</h3>
@@ -61,10 +61,20 @@
         <h3>Erin Werner</h3>
         <h4>Bridesmaid</h4>
       </div>
+      <div class="wedding-party-card">
+        <img src="https://via.placeholder.com/150" alt="">
+        <h3>Audrey Ryan</h3>
+        <h4>Junior Bridesmaid</h4>
+      </div>
+      <div class="wedding-party-card">
+        <img src="https://via.placeholder.com/150" alt="">
+        <h3>Jillian Ryan</h3>
+        <h4>Junior Bridesmaid</h4>
+      </div>
     </section>
 
     <section class="bridal-party-section">
-      <!-- <h2>Groom Party</h2> -->
+      <h2>Groomsmen</h2>
       <div class="wedding-party-card">
         <img src="https://via.placeholder.com/150" alt="">
         <h3>Walter Furrer</h3>
