--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
       <li><a href="#">Photos</a></li>
       <li><a href="/pages/wedding-party.html">Wedding Party</a></li>
       <li><a href="#">Accommodations</a></li>
-      <li><a href="#">Venue</a></li>
+      <li><a href="/pages/venue.html">Venue</a></li>
     </ul>
   </nav>
   <header class="header">
