--- a/pages/wedding-party.html
+++ b/pages/wedding-party.html
@@ -16,7 +16,7 @@
       <li><a href="#">Photos</a></li>
       <li><a href="/pages/wedding-party.html">Wedding Party</a></li>
       <li><a href="#">Accommodations</a></li>
-      <li><a href="#">Venue</a></li>
+      <li><a href="/pages/venue.html">Venue</a></li>
     </ul>
   </nav>
   <header class="header">
@@ -26,47 +26,47 @@
   <main class="main">
     <section class="bridal-party-section">
       <h2>Bridesmaids</h2>
-      <div class="wedding-party-card">
+      <div class="image-card">
         <img src="https://via.placeholder.com/150" alt="">
         <h3>Amanda Laikin</h3>
         <h4>Maid of Honor</h4>
       </div>
-      <div class="wedding-party-card">
+      <div class="image-card">
         <img src="https://via.placeholder.com/150" alt="">
         <h3>Emily Baio</h3>
         <h4>Bridesmaid</h4>
       </div>
-      <div class="wedding-party-card">
+      <div class="image-card">
         <img src="https://via.placeholder.com/150" alt="">
         <h3>Joanna Bonura</h3>
         <h4>Bridesmaid</h4>
       </div>
-      <div class="wedding-party-card">
-        <img src="https://via.placeholder.com/150" alt="">
-        <h3>Anna Yung</h3>
-        <h4>Bridesmaid</h4>
-      </div>
-      <div class="wedding-party-card">
-        <img src="https://via.placeholder.com/150" alt="">
-        <h3>Samantha Motta</h3>
-        <h4>Bridesmaid</h4>
-      </div>
-      <div class="wedding-party-card">
+      <div class="image-card">
         <img src="https://via.placeholder.com/150" alt="">
         <h3>Emily Furrer</h3>
         <h4>Bridesmaid</h4>
       </div>
-      <div class="wedding-party-card">
+      <div class="image-card">
+        <img src="https://via.placeholder.com/150" alt="">
+        <h3>Samantha Motta</h3>
+        <h4>Bridesmaid</h4>
+      </div>
+      <div class="image-card">
         <img src="https://via.placeholder.com/150" alt="">
         <h3>Erin Werner</h3>
         <h4>Bridesmaid</h4>
       </div>
-      <div class="wedding-party-card">
+      <div class="image-card">
+        <img src="https://via.placeholder.com/150" alt="">
+        <h3>Anna Young</h3>
+        <h4>Bridesmaid</h4>
+      </div>
+      <div class="image-card">
         <img src="https://via.placeholder.com/150" alt="">
         <h3>Audrey Ryan</h3>
         <h4>Junior Bridesmaid</h4>
       </div>
-      <div class="wedding-party-card">
+      <div class="image-card">
         <img src="https://via.placeholder.com/150" alt="">
         <h3>Jillian Ryan</h3>
         <h4>Junior Bridesmaid</h4>
@@ -75,41 +75,49 @@
 
     <section class="bridal-party-section">
       <h2>Groomsmen</h2>
-      <div class="wedding-party-card">
+      <div class="image-card">
         <img src="https://via.placeholder.com/150" alt="">
         <h3>Walter Furrer</h3>
         <h4>Best Man</h4>
       </div>
-      <div class="wedding-party-card">
+      <div class="image-card">
         <img src="https://via.placeholder.com/150" alt="">
         <h3>Anthony Calderaro</h3>
         <h4>Groomsman</h4>
       </div>
-      <div class="wedding-party-card">
-        <img src="https://via.placeholder.com/150" alt="">
-        <h3>Joeseph Ryan</h3>
-        <h4>Groomsman</h4>
-      </div>
-      <div class="wedding-party-card">
-        <img src="https://via.placeholder.com/150" alt="">
-        <h3>Thomas Ryan</h3>
-        <h4>Groomsman</h4>
-      </div>
-      <div class="wedding-party-card">
+      <div class="image-card">
         <img src="https://via.placeholder.com/150" alt="">
         <h3>Richard Motta</h3>
         <h4>Groomsman</h4>
       </div>
-      <div class="wedding-party-card">
+      <div class="image-card">
+        <img src="https://via.placeholder.com/150" alt="">
+        <h3>Joseph Ryan</h3>
+        <h4>Groomsman</h4>
+      </div>
+      <div class="image-card">
+        <img src="https://via.placeholder.com/150" alt="">
+        <h3>Thomas Ryan</h3>
+        <h4>Groomsman</h4>
+      </div>
+      <div class="image-card">
         <img src="https://via.placeholder.com/150" alt="">
         <h3>Maurice Tompkins</h3>
         <h4>Groomsman</h4>
       </div>
-      <div class="wedding-party-card">
+      <div class="image-card">
         <img src="https://via.placeholder.com/150" alt="">
         <h3>Didier Valles</h3>
         <h4>Groomsman</h4>
       </div>
+    </section>
+
+    <section class="bridal-party-section">
+      <h2>Officiant</h2>
+      <div class="image-card">
+        <img src="https://via.placeholder.com/150" alt="">
+        <h3>Kerri Mitchell</h3>
+        <h4>Officiant</h4>
     </section>
   </main>
 
