updated venue description

--- a/pages/venue.html
+++ b/pages/venue.html
@@ -34,8 +34,10 @@
           Club</a></h2>
       <h3>51 Salisbury Ave.</h3>
       <h3>Garden City, NY 11530</h3>
-      <p class="venue-description">The Stewart Manor Country Club is a beautifully renovated catering facility located
-        in Western Nassau County, New York.</p>
+      <p class="venue-description">The Stewart Manor Country Club is a unique and beautifully maintained location
+        in Western Nassau County, New York. Megan and Ryan fell in love with this venue at first sight, it was the first
+        venue they saw and knew they had their hearts set on it. Stewart Manor's staff, rustic charm and delicious food
+        makes it stand out from so many other locations.</p>
     </section>
   </main>
 
