Created blank pages for photos and accomodations and updated all navbar links

--- a/index.html
+++ b/index.html
@@ -6,21 +6,21 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="/css/css-reset.css">
   <link rel="stylesheet" href="/css/style.css">
-  <title>Document</title>
+  <title>Furrerver 2021 | Home</title>
 </head>
 
 <body class="site">
   <nav class="navbar">
     <ul class="navlist">
       <li><a href="index.html">Home</a></li>
-      <li><a href="#">Photos</a></li>
+      <li><a href="/pages/photos.html">Photos</a></li>
       <li><a href="/pages/wedding-party.html">Wedding Party</a></li>
-      <li><a href="#">Accommodations</a></li>
+      <li><a href="/pages/accomodations.html">Accommodations</a></li>
       <li><a href="/pages/venue.html">Venue</a></li>
     </ul>
   </nav>
   <header class="header">
-    <h1>Megan and Ryan</h1>
+    <h1>Megan & Ryan</h1>
     <h3>October 15th, 2021</h3>
   </header>
   <main class="main">
