--- a/pages/photos.html
+++ b/pages/photos.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="/css/css-reset.css">
   <link rel="stylesheet" href="/css/style.css">
-  <title>Furrever 2021 | Venue</title>
+  <title>Furrever 2021 | Photos</title>
 </head>
 
 <body class="site">
@@ -20,24 +20,12 @@
     </ul>
   </nav>
   <header class="header">
-    <h1>Venue</h1>
-    <h3>Where are we getting married?</h3>
+    <h1>Photos</h1>
+    <h3>Have you not seen enough of us?</h3>
   </header>
   <main class="main">
     <section class="bridal-party-section">
-      <div class="image-card">
-        <img src="../img/venue-img.jpg" alt="">
-        <h4>Grand Ballroom</h4>
-      </div>
-      <h2 class="venue-name"><a href="https://www.stewartmanor.com/" target="_blank" rel="noopener noreferrer">Stewart
-          Manor Country
-          Club</a></h2>
-      <h3>51 Salisbury Ave.</h3>
-      <h3>Garden City, NY 11530</h3>
-      <p class="venue-description">The Stewart Manor Country Club is a unique and beautifully maintained location
-        in Western Nassau County, New York. Megan and Ryan fell in love with this venue at first sight, it was the first
-        venue they saw and knew they had their hearts set on it. Stewart Manor's staff, rustic charm and delicious food
-        makes it stand out from so many other locations.</p>
+      <h2>To be determined...</h2>
     </section>
   </main>
 
