--- a/pages/wedding-party.html
+++ b/pages/wedding-party.html
@@ -4,6 +4,8 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link href="https://fonts.googleapis.com/css2?family=Petit+Formal+Script&family=Raleway&display=swap"
+    rel="stylesheet">
   <link rel="stylesheet" href="/css/css-reset.css">
   <link rel="stylesheet" href="/css/style.css">
   <title>Furrever 2021 | Wedding Party</title>
