Updated css for reusability

--- a/pages/photos.html
+++ b/pages/photos.html
@@ -26,7 +26,7 @@
     <h3>Have you not seen enough of us?</h3>
   </header>
   <main class="main">
-    <section class="bridal-party-section">
+    <section class="section-container">
       <h2>To be determined...</h2>
     </section>
   </main>
