--- a/pages/venue.html
+++ b/pages/venue.html
@@ -26,7 +26,7 @@
     <h3>Where are we getting married?</h3>
   </header>
   <main class="main">
-    <section class="bridal-party-section">
+    <section class="section-container">
       <div class="image-card">
         <img src="../img/venue-img.jpg" alt="">
         <h4>Grand Ballroom</h4>
