--- a/pages/accomodations.html
+++ b/pages/accomodations.html
@@ -26,7 +26,7 @@
     <h3>Where can you stay nearby?</h3>
   </header>
   <main class="main">
-    <section class="bridal-party-section">
+    <section class="section-container">
       <h2>To be determined...</h2>
     </section>
   </main>
