--- a/pages/wedding-party.html
+++ b/pages/wedding-party.html
@@ -26,7 +26,7 @@
     <h3>Who are we partying with?</h3>
   </header>
   <main class="main">
-    <section class="bridal-party-section">
+    <section class="section-container">
       <h2>Bridesmaids</h2>
       <div class="image-card">
         <img src="https://via.placeholder.com/150" alt="">
@@ -75,7 +75,7 @@
       </div>
     </section>
 
-    <section class="bridal-party-section">
+    <section class="section-container">
       <h2>Groomsmen</h2>
       <div class="image-card">
         <img src="https://via.placeholder.com/150" alt="">
@@ -114,7 +114,7 @@
       </div>
     </section>
 
-    <section class="bridal-party-section">
+    <section class="section-container">
       <h2>Officiant</h2>
       <div class="image-card">
         <img src="https://via.placeholder.com/150" alt="">
