Created media queries for responsiveness

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     <h3>October 15th, 2021</h3>
   </header>
   <main class="main">
-    <section class="section-container">
+    <section id="our-story" class="section-container">
       <h2>Our Story</h2>
       <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Vero, vitae. Possimus tenetur repudiandae quod
         placeat quasi itaque corrupti iste rem vitae aut optio ab, voluptates enim? Fugit mollitia dolores expedita.</p>
