Added responsive text-size and changed "Accommodations" to "Hotels"

--- a/pages/hotels.html
+++ b/pages/hotels.html
@@ -17,12 +17,12 @@
       <li><a href="../index.html">Home</a></li>
       <li><a href="/pages/photos.html">Photos</a></li>
       <li><a href="/pages/wedding-party.html">Wedding Party</a></li>
-      <li><a href="/pages/accomodations.html">Accommodations</a></li>
+      <li><a href="/pages/hotels.html">Hotels</a></li>
       <li><a href="/pages/venue.html">Venue</a></li>
     </ul>
   </nav>
   <header class="header">
-    <h1>Accommodations</h1>
+    <h1>Hotels</h1>
     <h3>Where can you stay nearby?</h3>
   </header>
   <main class="main">
