--- a/pages/photos.html
+++ b/pages/photos.html
@@ -17,7 +17,7 @@
       <li><a href="../index.html">Home</a></li>
       <li><a href="/pages/photos.html">Photos</a></li>
       <li><a href="/pages/wedding-party.html">Wedding Party</a></li>
-      <li><a href="/pages/accomodations.html">Accommodations</a></li>
+      <li><a href="/pages/hotels.html">Hotels</a></li>
       <li><a href="/pages/venue.html">Venue</a></li>
     </ul>
   </nav>
