--- a/index.html
+++ b/index.html
@@ -17,12 +17,12 @@
       <li><a href="index.html">Home</a></li>
       <li><a href="/pages/photos.html">Photos</a></li>
       <li><a href="/pages/wedding-party.html">Wedding Party</a></li>
-      <li><a href="/pages/accomodations.html">Accommodations</a></li>
+      <li><a href="/pages/hotels.html">Hotels</a></li>
       <li><a href="/pages/venue.html">Venue</a></li>
     </ul>
   </nav>
   <header class="header">
-    <h1>Megan & Ryan</h1>
+    <h1>Megan <br />& <br />Ryan</h1>
     <h3>October 15th, 2021</h3>
   </header>
   <main class="main">
