Changed "Hotels" to "Details" and moved nav links around

--- a/pages/details.html
+++ b/pages/details.html
@@ -17,13 +17,13 @@
       <li><a href="../index.html">Home</a></li>
       <li><a href="/pages/photos.html">Photos</a></li>
       <li><a href="/pages/wedding-party.html">Wedding Party</a></li>
-      <li><a href="/pages/hotels.html">Hotels</a></li>
       <li><a href="/pages/venue.html">Venue</a></li>
+      <li><a href="/pages/details.html">Details</a></li>
     </ul>
   </nav>
   <header class="header">
-    <h1>Hotels</h1>
-    <h3>Where can you stay nearby?</h3>
+    <h1>Details</h1>
+    <h3>The more you know...</h3>
   </header>
   <main class="main">
     <section class="section-container">
