--- a/pages/wedding-party.html
+++ b/pages/wedding-party.html
@@ -17,8 +17,8 @@
       <li><a href="../index.html">Home</a></li>
       <li><a href="/pages/photos.html">Photos</a></li>
       <li><a href="/pages/wedding-party.html">Wedding Party</a></li>
-      <li><a href="/pages/hotels.html">Hotels</a></li>
       <li><a href="/pages/venue.html">Venue</a></li>
+      <li><a href="/pages/details.html">Details</a></li>
     </ul>
   </nav>
   <header class="header">
