Text content update and .image-card update
Changed temporary content on "Photos" and "Details" pages.

Made .image-card smaller on larger screens.

--- a/pages/details.html
+++ b/pages/details.html
@@ -27,7 +27,7 @@
   </header>
   <main class="main">
     <section class="section-container">
-      <h2>To be determined...</h2>
+      <h2>Coming Soon!</h2>
     </section>
   </main>
 
