--- a/index.html
+++ b/index.html
@@ -28,14 +28,41 @@
   <main class="main">
     <section id="our-story" class="section-container">
       <h2>Our Story</h2>
-      <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Vero, vitae. Possimus tenetur repudiandae quod
-        placeat quasi itaque corrupti iste rem vitae aut optio ab, voluptates enim? Fugit mollitia dolores expedita.</p>
-      <p>Amet inventore repellat, rerum sequi unde et doloribus consequatur cumque consectetur, officia est similique
-        suscipit molestiae officiis, exercitationem quaerat debitis assumenda quis. Quibusdam consectetur dicta numquam
-        quidem iste laboriosam sunt!</p>
-      <p>Porro harum earum modi exercitationem omnis tempora. Eum praesentium corporis autem, pariatur, sapiente nobis
-        quibusdam sed voluptas mollitia numquam perferendis? Laudantium cum nisi tempore, fugit quidem unde ducimus
-        similique nesciunt.</p>
+      <p>Their story begins like any modern romance - online! Megan had restarted online dating and Ryan was the first
+        she matched with on Bumble on January 7th in 2018. The connection was instant and Megan asked Ryan for his
+        number, and then out for a date shortly after. </p>
+      <p>Their first date was at South Shore Dive in Sayville on January 12th, where Megan ordered a drink with vanilla
+        seeds in it (which thankfully did not get caught in her teeth) and Ryan was distracted by unexpected coworkers
+        when first he first walked in (Megan likes to joke about the fact that Ryan was super awkward about the first
+        time they hugged, Ryan does not like that joke). They talked for hours and Ryan ended up kissing Megan outside
+        the bar in the middle of the road for the first time. Both Megan and Ryan say this was their best first date
+        ever.</p>
+      <p>It wasn’t long after this first date that Ryan asked Megan to be his girlfriend. And it wasn’t long after that
+        they figured out they were in love with each other. </p>
+      <p>There were little things along the way that felt like fate; Ryan is a twin and Megan’s brothers are twins,
+        Ryan’s father and brother shared a name with her grandfather, their best friends both lived in Houston, Ryan’s
+        cousin was her brother’s best friend. Then there were big things; their mothers went to High School together and
+        lived around the corner from one another and then they found out that they played in an orchestra together (both
+        playing viola) in junior high school. It seemed as though the universe was trying to bring them together
+        throughout their lives. Though neither of them had ever believed in love at first sight or fate, it seemed they
+        couldn’t ignore the signs in one another.</p>
+      <p>Ryan and Megan moved in together and built an apartment with the help of their families above Ryan’s parents
+        home. Megan’s dogs, Maggie and Charlie were happy to move in and make their little family whole.</p>
+      <p>In November 2019, Megan surprised Ryan with a trip to Boston for his birthday scheduled for December and Ryan
+        had found a ring, it was then he decided he would use this trip to propose.</p>
+      <p>Leading up to the proposal, Ryan dropped many hints that Megan was oblivious to, including talking about
+        Christmas lights set up in Christopher Columbus Park (Megan could not understand what was the big deal about
+        these damn Christmas lights). They met a friend for dinner near Faneuil Hall and then walked down to the park.
+        Ryan asked Megan to take a picture with him and surprised her by getting down on his knee and asking her to
+        marry him. It was a perfect moment.</p>
+      <p>Megan and Ryan are beyond excited to plan not only their wedding, but the rest of their lives together. They
+        continue to support and love each other each and every day and look forward to celebrating their love with
+        everyone on their wedding day.</p>
+      <aside class="quote-aside">
+        <p class="quote">“When you realize you want to spend the rest of your life with somebody, you want the rest of
+          your life to
+          start as soon as possible.” - <em>When Harry Met Sally</em></p>
+      </aside>
     </section>
   </main>
 
