Worked on Photos page
Added photos to img folder and added to website

Need to:
-add captions and alt text
-make responsive and smaller using flexbox

--- a/pages/photos.html
+++ b/pages/photos.html
@@ -27,7 +27,82 @@
   </header>
   <main class="main">
     <section class="section-container">
-      <h2>Coming soon!</h2>
+
+      <div class="image-card gallery-image">
+        <img src="../img/photo-gallery/meg-and-ryan_ (1).jpg" alt="">
+      </div>
+      <div class="image-card gallery-image">
+        <img src="../img/photo-gallery/meg-and-ryan_ (2).jpg" alt="">
+      </div>
+      <div class="image-card gallery-image">
+        <img src="../img/photo-gallery/meg-and-ryan_ (3).jpg" alt="">
+      </div>
+      <div class="image-card gallery-image">
+        <img src="../img/photo-gallery/meg-and-ryan_ (4).jpg" alt="">
+      </div>
+      <div class="image-card gallery-image">
+        <img src="../img/photo-gallery/meg-and-ryan_ (5).jpg" alt="">
+      </div>
+      <div class="image-card gallery-image">
+        <img src="../img/photo-gallery/meg-and-ryan_ (6).jpg" alt="">
+      </div>
+      <div class="image-card gallery-image">
+        <img src="../img/photo-gallery/meg-and-ryan_ (7).jpg" alt="">
+      </div>
+      <div class="image-card gallery-image">
+        <img src="../img/photo-gallery/meg-and-ryan_ (8).jpg" alt="">
+      </div>
+      <div class="image-card gallery-image">
+        <img src="../img/photo-gallery/meg-and-ryan_ (9).jpg" alt="">
+      </div>
+      <div class="image-card gallery-image">
+        <img src="../img/photo-gallery/meg-and-ryan_ (10).jpg" alt="">
+      </div>
+      <div class="image-card gallery-image">
+        <img src="../img/photo-gallery/meg-and-ryan_ (11).jpg" alt="">
+      </div>
+      <div class="image-card gallery-image">
+        <img src="../img/photo-gallery/meg-and-ryan_ (12).jpg" alt="">
+      </div>
+      <div class="image-card gallery-image">
+        <img src="../img/photo-gallery/meg-and-ryan_ (13).jpg" alt="">
+      </div>
+      <div class="image-card gallery-image">
+        <img src="../img/photo-gallery/meg-and-ryan_ (14).jpg" alt="">
+      </div>
+      <div class="image-card gallery-image">
+        <img src="../img/photo-gallery/meg-and-ryan_ (15).jpg" alt="">
+      </div>
+      <div class="image-card gallery-image">
+        <img src="../img/photo-gallery/meg-and-ryan_ (16).jpg" alt="">
+      </div>
+      <div class="image-card gallery-image">
+        <img src="../img/photo-gallery/meg-and-ryan_ (17).jpg" alt="">
+      </div>
+      <div class="image-card gallery-image">
+        <img src="../img/photo-gallery/meg-and-ryan_ (18).jpg" alt="">
+      </div>
+      <div class="image-card gallery-image">
+        <img src="../img/photo-gallery/meg-and-ryan_ (19).jpg" alt="">
+      </div>
+      <div class="image-card gallery-image">
+        <img src="../img/photo-gallery/meg-and-ryan_ (20).jpg" alt="">
+      </div>
+      <div class="image-card gallery-image">
+        <img src="../img/photo-gallery/meg-and-ryan_ (21).jpg" alt="">
+      </div>
+      <div class="image-card gallery-image">
+        <img src="../img/photo-gallery/meg-and-ryan_ (22).jpg" alt="">
+      </div>
+      <div class="image-card gallery-image">
+        <img src="../img/photo-gallery/meg-and-ryan_ (23).jpg" alt="">
+      </div>
+      <div class="image-card gallery-image">
+        <img src="../img/photo-gallery/meg-and-ryan_ (24).jpg" alt="">
+      </div>
+      <div class="image-card gallery-image">
+        <img src="../img/photo-gallery/meg-and-ryan_ (25).jpg" alt="">
+      </div>
     </section>
   </main>
 
