Added wedding party images

--- a/pages/venue.html
+++ b/pages/venue.html
@@ -27,7 +27,7 @@
   </header>
   <main class="main">
     <section class="section-container">
-      <div class="image-card">
+      <div id="venue-picture" class="image-card">
         <img src="../img/venue-img.jpg" alt="">
         <h4>Grand Ballroom</h4>
       </div>
