--- a/pages/wedding-party.html
+++ b/pages/wedding-party.html
@@ -29,47 +29,47 @@
     <section class="section-container">
       <h2>Bridesmaids</h2>
       <div class="image-card">
-        <img src="https://via.placeholder.com/150" alt="">
+        <img class="wedding-party laikin" src="https://via.placeholder.com/150" alt="">
         <h3>Amanda Laikin</h3>
         <h4>Maid of Honor</h4>
       </div>
       <div class="image-card">
-        <img src="https://via.placeholder.com/150" alt="">
+        <img class="wedding-party baio" src="https://via.placeholder.com/150" alt="">
         <h3>Emily Baio</h3>
         <h4>Bridesmaid</h4>
       </div>
       <div class="image-card">
-        <img src="https://via.placeholder.com/150" alt="">
+        <img class="wedding-party bonura" src="../img/wedding-party/joanna.jpeg" alt="">
         <h3>Joanna Bonura</h3>
         <h4>Bridesmaid</h4>
       </div>
       <div class="image-card">
-        <img src="https://via.placeholder.com/150" alt="">
+        <img class="wedding-party emily-furrer" src="../img/wedding-party/emily_f.jpg" alt="">
         <h3>Emily Furrer</h3>
         <h4>Bridesmaid</h4>
       </div>
       <div class="image-card">
-        <img src="https://via.placeholder.com/150" alt="">
+        <img class="wedding-party samantha-motta" src="https://via.placeholder.com/150" alt="">
         <h3>Samantha Motta</h3>
         <h4>Bridesmaid</h4>
       </div>
       <div class="image-card">
-        <img src="https://via.placeholder.com/150" alt="">
+        <img class="wedding-party werner" src="https://via.placeholder.com/150" alt="">
         <h3>Erin Werner</h3>
         <h4>Bridesmaid</h4>
       </div>
       <div class="image-card">
-        <img src="https://via.placeholder.com/150" alt="">
+        <img class="wedding-party young" src="https://via.placeholder.com/150" alt="">
         <h3>Anna Young</h3>
         <h4>Bridesmaid</h4>
       </div>
       <div class="image-card">
-        <img src="https://via.placeholder.com/150" alt="">
+        <img class="wedding-party audrey-ryan" src="https://via.placeholder.com/150" alt="">
         <h3>Audrey Ryan</h3>
         <h4>Junior Bridesmaid</h4>
       </div>
       <div class="image-card">
-        <img src="https://via.placeholder.com/150" alt="">
+        <img class="wedding-party jillian-ryan" src="https://via.placeholder.com/150" alt="">
         <h3>Jillian Ryan</h3>
         <h4>Junior Bridesmaid</h4>
       </div>
@@ -78,37 +78,37 @@
     <section class="section-container">
       <h2>Groomsmen</h2>
       <div class="image-card">
-        <img src="https://via.placeholder.com/150" alt="">
+        <img class="wedding-party" src="https://via.placeholder.com/150" alt="">
         <h3>Walter Furrer</h3>
         <h4>Best Man</h4>
       </div>
       <div class="image-card">
-        <img src="https://via.placeholder.com/150" alt="">
+        <img class="wedding-party" src="https://via.placeholder.com/150" alt="">
         <h3>Anthony Calderaro</h3>
         <h4>Groomsman</h4>
       </div>
       <div class="image-card">
-        <img src="https://via.placeholder.com/150" alt="">
+        <img class="wedding-party" src="https://via.placeholder.com/150" alt="">
         <h3>Richard Motta</h3>
         <h4>Groomsman</h4>
       </div>
       <div class="image-card">
-        <img src="https://via.placeholder.com/150" alt="">
+        <img class="wedding-party" src="https://via.placeholder.com/150" alt="">
         <h3>Joseph Ryan</h3>
         <h4>Groomsman</h4>
       </div>
       <div class="image-card">
-        <img src="https://via.placeholder.com/150" alt="">
+        <img class="wedding-party" src="https://via.placeholder.com/150" alt="">
         <h3>Thomas Ryan</h3>
         <h4>Groomsman</h4>
       </div>
       <div class="image-card">
-        <img src="https://via.placeholder.com/150" alt="">
+        <img class="wedding-party" src="https://via.placeholder.com/150" alt="">
         <h3>Maurice Tompkins</h3>
         <h4>Groomsman</h4>
       </div>
       <div class="image-card">
-        <img src="https://via.placeholder.com/150" alt="">
+        <img class="wedding-party" src="https://via.placeholder.com/150" alt="">
         <h3>Didier Valles</h3>
         <h4>Groomsman</h4>
       </div>
@@ -117,7 +117,7 @@
     <section class="section-container">
       <h2>Officiant</h2>
       <div class="image-card">
-        <img src="https://via.placeholder.com/150" alt="">
+        <img class="wedding-party" src="https://via.placeholder.com/150" alt="">
         <h3>Kerri Mitchell</h3>
         <h4>Officiant</h4>
     </section>
