Added 3 new wedding-party images to website

--- a/pages/wedding-party.html
+++ b/pages/wedding-party.html
@@ -34,7 +34,7 @@
         <h4>Maid of Honor</h4>
       </div>
       <div class="image-card">
-        <img class="wedding-party baio" src="https://via.placeholder.com/150" alt="">
+        <img class="wedding-party baio" src="../img/wedding-party/emily_b.jpeg" alt="">
         <h3>Emily Baio</h3>
         <h4>Bridesmaid</h4>
       </div>
@@ -54,12 +54,12 @@
         <h4>Bridesmaid</h4>
       </div>
       <div class="image-card">
-        <img class="wedding-party werner" src="https://via.placeholder.com/150" alt="">
+        <img class="wedding-party werner" src="../img/wedding-party/erin.JPG" alt="">
         <h3>Erin Werner</h3>
         <h4>Bridesmaid</h4>
       </div>
       <div class="image-card">
-        <img class="wedding-party young" src="https://via.placeholder.com/150" alt="">
+        <img class="wedding-party young" src="../img/wedding-party/anna.jpg" alt="">
         <h3>Anna Young</h3>
         <h4>Bridesmaid</h4>
       </div>
