working on additions

--- a/index.html
+++ b/index.html
@@ -28,6 +28,14 @@
   <main class="main">
     <section id="our-story" class="section-container">
       <h2>Our Story</h2>
+      <div class="profiles">
+        <div id="meg" class="image-card">
+          <img src="/img/meg.jpg" alt="">
+        </div>
+        <div id="ryan" class="image-card meg">
+          <img src="/img/ryan-portrait.jpg" alt="">
+        </div>
+      </div>
       <p>Their story begins like any modern romance - online! Megan had restarted online dating and Ryan was the first
         she matched with on Bumble on January 7th in 2018. The connection was instant and Megan asked Ryan for his
         number, and then out for a date shortly after. </p>
@@ -46,6 +54,9 @@
         playing viola) in junior high school. It seemed as though the universe was trying to bring them together
         throughout their lives. Though neither of them had ever believed in love at first sight or fate, it seemed they
         couldn’t ignore the signs in one another.</p>
+      <div id="family" class="image-card">
+        <img src="/img/family.jpg" alt="">
+      </div>
       <p>Ryan and Megan moved in together and built an apartment with the help of their families above Ryan’s parents
         home. Megan’s dogs, Maggie and Charlie were happy to move in and make their little family whole.</p>
       <p>In November 2019, Megan surprised Ryan with a trip to Boston for his birthday scheduled for December and Ryan
