--- a/pages/photos.html
+++ b/pages/photos.html
@@ -26,7 +26,7 @@
     <h3>Have you not seen enough of us?</h3>
   </header>
   <main class="main">
-    <section class="section-container">
+    <section class="section-container photo-section">
 
       <div class="image-card gallery-image">
         <img src="../img/photo-gallery/meg-and-ryan_ (1).jpg" alt="">
