--- a/pages/wedding-party.html
+++ b/pages/wedding-party.html
@@ -64,12 +64,12 @@
         <h4>Bridesmaid</h4>
       </div>
       <div class="image-card">
-        <img class="wedding-party audrey-ryan" src="https://via.placeholder.com/150" alt="">
+        <img class="wedding-party audrey-ryan" src="../img/wedding-party/audrey.jpg" alt="">
         <h3>Audrey Ryan</h3>
         <h4>Junior Bridesmaid</h4>
       </div>
       <div class="image-card">
-        <img class="wedding-party jillian-ryan" src="https://via.placeholder.com/150" alt="">
+        <img class="wedding-party jillian-ryan" src="../img/wedding-party/jillian.jpg" alt="">
         <h3>Jillian Ryan</h3>
         <h4>Junior Bridesmaid</h4>
       </div>
