Added wedding party photos

--- a/index.html
+++ b/index.html
@@ -30,10 +30,10 @@
       <h2>Our Story</h2>
       <div class="profiles">
         <div id="meg" class="image-card">
-          <img src="/img/meg.jpg" alt="">
+          <img src="/img/meg.jpg" alt="Meg at a beach with a cocktail">
         </div>
-        <div id="ryan" class="image-card meg">
-          <img src="/img/ryan-portrait.jpg" alt="">
+        <div id="ryan" class="image-card">
+          <img src="/img/ryan-portrait.jpg" alt="Ryan holding a mug of beer">
         </div>
       </div>
       <p>Their story begins like any modern romance - online! Megan had restarted online dating and Ryan was the first
