--- a/pages/wedding-party.html
+++ b/pages/wedding-party.html
@@ -26,10 +26,10 @@
     <h3>Who are we partying with?</h3>
   </header>
   <main class="main">
-    <section class="section-container">
+    <section class="section-container photo-gallery">
       <h2>Bridesmaids</h2>
       <div class="image-card">
-        <img class="wedding-party laikin" src="https://via.placeholder.com/150" alt="">
+        <img class="wedding-party laikin" src="../img/wedding-party/amanda.jpg" alt="">
         <h3>Amanda Laikin</h3>
         <h4>Maid of Honor</h4>
       </div>
@@ -49,7 +49,7 @@
         <h4>Bridesmaid</h4>
       </div>
       <div class="image-card">
-        <img class="wedding-party samantha-motta" src="https://via.placeholder.com/150" alt="">
+        <img class="wedding-party samantha-motta" src="../img/wedding-party/sam.JPG" alt="">
         <h3>Samantha Motta</h3>
         <h4>Bridesmaid</h4>
       </div>
@@ -117,7 +117,7 @@
     <section class="section-container">
       <h2>Officiant</h2>
       <div class="image-card">
-        <img class="wedding-party" src="https://via.placeholder.com/150" alt="">
+        <img class="wedding-party kerri" src="../img/wedding-party/kerri.jpg" alt="">
         <h3>Kerri Mitchell</h3>
         <h4>Officiant</h4>
     </section>
