Added registry links to Details page.

--- a/pages/details.html
+++ b/pages/details.html
@@ -26,8 +26,22 @@
     <h3>The more you know...</h3>
   </header>
   <main class="main">
-    <section class="section-container">
-      <h2>Coming Soon!</h2>
+    <section class="details section-container">
+      <h2>Registries</h2>
+      <p>We've decided to register at both Target and Amazon.</p>
+      <p>A honeymoon fund is also coming soon!</p>
+      <div class="container_50-50">
+        <div class="registry target btn">
+          <h3><a href="tgt.gifts/Furrever" target="_blank" rel="noopener noreferrer">Target</a></h3>
+        </div>
+        <div class="registry amazon btn">
+          <h3><a href="https://www.amazon.com/wedding/registry/WLW83YSOO3XG?ref=wr_search_page_result_2r"
+              target="_blank" rel="noopener noreferrer">Amazon</a></h3>
+        </div>
+      </div>
+      <aside>
+        <p>Also, details on a hotel near our venue will also be coming soon!</p>
+      </aside>
     </section>
   </main>
 
