Fixed typo in 2nd <p> in index.html

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
         number, and then out for a date shortly after. </p>
       <p>Their first date was at South Shore Dive in Sayville on January 12th, where Megan ordered a drink with vanilla
         seeds in it (which thankfully did not get caught in her teeth) and Ryan was distracted by unexpected coworkers
-        when first he first walked in (Megan likes to joke about the fact that Ryan was super awkward about the first
+        when he first walked in (Megan likes to joke about the fact that Ryan was super awkward about the first
         time they hugged, Ryan does not like that joke). They talked for hours and Ryan ended up kissing Megan outside
         the bar in the middle of the road for the first time. Both Megan and Ryan say this was their best first date
         ever.</p>
