Made profile pictures on homepage match

--- a/index.html
+++ b/index.html
@@ -29,10 +29,10 @@
     <section id="our-story" class="section-container">
       <h2>Our Story</h2>
       <div class="profiles">
-        <div id="meg" class="image-card">
+        <div id="meg-homepage" class="image-card">
           <img src="/img/meg.jpg" alt="Meg at a beach with a cocktail">
         </div>
-        <div id="ryan" class="image-card">
+        <div id="ryan-homepage" class="image-card">
           <img src="/img/ryan-portrait.jpg" alt="Ryan holding a mug of beer">
         </div>
       </div>
