--- a/index.html
+++ b/index.html
@@ -1,92 +1,125 @@
 <!DOCTYPE html>
 <html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Petit+Formal+Script&family=Raleway:ital,wght@0,300;0,400;0,500;1,300;1,400;1,500&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="stylesheet" href="/css/css-reset.css" />
+    <link rel="stylesheet" href="/css/styles.css" />
+    <title>Megan & Ryan's Wedding | October 2021</title>
+  </head>
 
-<head>
-  <meta charset="UTF-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="/css/css-reset.css">
-  <link rel="stylesheet" href="/css/styles.css">
-  <title>Megan & Ryan's Wedding | October 2021</title>
-</head>
+  <body>
+    <nav>
+      <ul role="list">
+        <li><a href="#">Home</a></li>
+        <li><a href="#">Photos</a></li>
+        <li><a href="#">Wedding Party</a></li>
+        <li><a href="#">Venue</a></li>
+        <li><a href="#">Details</a></li>
+      </ul>
+    </nav>
 
-<body>
-  <nav>
-    <ul role="list">
-      <li><a href="#">Home</a></li>
-      <li><a href="#">Photos</a></li>
-      <li><a href="#">Wedding Party</a></li>
-      <li><a href="#">Venue</a></li>
-      <li><a href="#">Details</a></li>
-    </ul>
-  </nav>
+    <header>
+      <h1>Megan & Ryan</h1>
+      <h3>October 15th, 2021</h3>
+    </header>
 
-  <header>
-    <h1>Megan & Ryan</h1>
-    <h3>October 15th, 2021</h3>
-  </header>
+    <main class="container">
+      <section>
+        <article>
+          <h2>Our Story</h2>
+          <p>
+            Their story begins like any modern romance - online! Megan had
+            restarted online dating and Ryan was the first she matched with on
+            Bumble on January 7th in 2018. The connection was instant and Megan
+            asked Ryan for his number, and then out for a date shortly after.
+          </p>
+          <p>
+            Their first date was at South Shore Dive in Sayville on January
+            12th, where Megan ordered a drink with vanilla seeds in it (which
+            thankfully did not get caught in her teeth) and Ryan was distracted
+            by unexpected coworkers when he first walked in (Megan likes to joke
+            about the fact that Ryan was super awkward about the first time they
+            hugged, Ryan does not like that joke). They talked for hours and
+            Ryan ended up kissing Megan outside the bar in the middle of the
+            road for the first time. Both Megan and Ryan say this was their best
+            first date ever.
+          </p>
+          <p>
+            It wasn’t long after this first date that Ryan asked Megan to be his
+            girlfriend. And it wasn’t long after that they figured out they were
+            in love with each other.
+          </p>
+          <p>
+            There were little things along the way that felt like fate; Ryan is
+            a twin and Megan’s brothers are twins, Ryan’s father and brother
+            shared a name with her grandfather, their best friends both lived in
+            Houston, Ryan’s cousin was her brother’s best friend. Then there
+            were big things; their mothers went to High School together and
+            lived around the corner from one another and then they found out
+            that they played in an orchestra together (both playing viola) in
+            junior high school. It seemed as though the universe was trying to
+            bring them together throughout their lives. Though neither of them
+            had ever believed in love at first sight or fate, it seemed they
+            couldn’t ignore the signs in one another.
+          </p>
+          <p>
+            Ryan and Megan moved in together and built an apartment with the
+            help of their families above Ryan’s parents home. Megan’s dogs,
+            Maggie and Charlie were happy to move in and make their little
+            family whole.
+          </p>
+          <p>
+            In November 2019, Megan surprised Ryan with a trip to Boston for his
+            birthday scheduled for December and Ryan had found a ring, it was
+            then he decided he would use this trip to propose.
+          </p>
+          <p>
+            Leading up to the proposal, Ryan dropped many hints that Megan was
+            oblivious to, including talking about Christmas lights set up in
+            Christopher Columbus Park (Megan could not understand what was the
+            big deal about these damn Christmas lights). They met a friend for
+            dinner near Faneuil Hall and then walked down to the park. Ryan
+            asked Megan to take a picture with him and surprised her by getting
+            down on his knee and asking her to marry him. It was a perfect
+            moment.
+          </p>
+          <p>
+            Megan and Ryan are beyond excited to plan not only their wedding,
+            but the rest of their lives together. They continue to support and
+            love each other each and every day and look forward to celebrating
+            their love with everyone on their wedding day.
+          </p>
+        </article>
+      </section>
 
-  <main>
-    <section>
-      <article>
-        <h2>Our Story</h2>
-        <p>Their story begins like any modern romance - online! Megan had restarted online dating and Ryan was the first
-          she matched with on Bumble on January 7th in 2018. The connection was instant and Megan asked Ryan for his
-          number, and then out for a date shortly after.
+      <aside>
+        <p>
+          “When you realize you want to spend the rest of your life with
+          somebody, you want the rest of your life to start as soon as
+          possible.” <span> - When Harry Met Sally</span>
         </p>
-        <p>Their first date was at South Shore Dive in Sayville on January 12th, where Megan ordered a drink with
-          vanilla seeds in it (which thankfully did not get caught in her teeth) and Ryan was distracted by unexpected
-          coworkers when he first walked in (Megan likes to joke about the fact that Ryan was super awkward about the
-          first time they hugged, Ryan does not like that joke). They talked for hours and Ryan ended up kissing Megan
-          outside the bar in the middle of the road for the first time. Both Megan and Ryan say this was their best
-          first date ever.
-        </p>
-        <p>It wasn’t long after this first date that Ryan asked Megan to be his girlfriend. And it wasn’t long after
-          that they figured out they were in love with each other.
-        </p>
-        <p>There were little things along the way that felt like fate; Ryan is a twin and Megan’s brothers are twins,
-          Ryan’s father and brother shared a name with her grandfather, their best friends both lived in Houston, Ryan’s
-          cousin was her brother’s best friend. Then there were big things; their mothers went to High School together
-          and lived around the corner from one another and then they found out that they played in an orchestra together
-          (both playing viola) in junior high school. It seemed as though the universe was trying to bring them together
-          throughout their lives. Though neither of them had ever believed in love at first sight or fate, it seemed
-          they couldn’t ignore the signs in one another.
+      </aside>
+    </main>
 
-        </p>
-        <p>Ryan and Megan moved in together and built an apartment with the help of their families above Ryan’s parents
-          home. Megan’s dogs, Maggie and Charlie were happy to move in and make their little family whole.
-
-        </p>
-        <p>In November 2019, Megan surprised Ryan with a trip to Boston for his birthday scheduled for December and Ryan
-          had found a ring, it was then he decided he would use this trip to propose.
-
-        </p>
-        <p>Leading up to the proposal, Ryan dropped many hints that Megan was oblivious to, including talking about
-          Christmas lights set up in Christopher Columbus Park (Megan could not understand what was the big deal about
-          these damn Christmas lights). They met a friend for dinner near Faneuil Hall and then walked down to the park.
-          Ryan asked Megan to take a picture with him and surprised her by getting down on his knee and asking her to
-          marry him. It was a perfect moment.
-
-        </p>
-        <p>Megan and Ryan are beyond excited to plan not only their wedding, but the rest of their lives together. They
-          continue to support and love each other each and every day and look forward to celebrating their love with
-          everyone on their wedding day.
-
-        </p>
-      </article>
-    </section>
-  </main>
-
-  <aside>
-    <p>“When you realize you want to spend the rest of your life with somebody, you want the rest of your life to start
-      as soon as possible.” - When Harry Met Sally
-
-    </p>
-  </aside>
-
-  <footer>
-    <p>&copy; 2021 <a href="https://theryanfurrer.dev" target="_blank" rel="noopener noreferrer">Ryan Furrer</a></p>
-  </footer>
-</body>
-
+    <footer>
+      <p>
+        &copy; 2021
+        <a
+          href="https://theryanfurrer.dev"
+          target="_blank"
+          rel="noopener noreferrer"
+          >Ryan Furrer</a
+        >
+        - made with ♥️
+      </p>
+    </footer>
+  </body>
 </html>
